# pico

./: CMakeLists.txt  LICENSE  README.md  example_auto_set_url.cmake
dummy_flash/: CMakeLists.txt  README  dummy.c
dummy_rom/: CMakeLists.txt  README
midi_adapter/: CMakeLists.txt  README  main.c  main.cpp  midi_port.cpp  midi_port.h  usb_descriptors.c
midi_adapter_flex/: CMakeLists.txt  README  midi_message.cpp  midi_message.h  midi_port_uart.cpp  midi_port_uart.h  midi_port_usb.cpp  midi_port_usb.h  usb_descriptors.c
spi_slave_pio/: CMakeLists.txt  README  spi_slave.pio  spi_slave_pio.c
